fixing broken css and js

--- a/stickybeak/static/style.scss
+++ b/stickybeak/static/style.scss
@@ -1,8 +1,8 @@
 @import 'bourbon'; // http://bourbon.io/
 
-@import '../partials/mixins'; // custom mixins
+@import 'mixins'; // custom mixins
 
-@import '../partials/layout'; // responsive grid and media queries
+@import 'layout'; // responsive grid and media queries
 
 /* -------------------------------- 
 
@@ -173,7 +173,7 @@ body[data-hijacking="on"] {
 		text-indent: 100%;
 		white-space: nowrap;
 
-		// background: url(../img/cd-icon-arrow.svg) no-repeat center center;
+		background: url(../img/cd-icon-arrow.svg) no-repeat center center;
 
 		&.cd-prev {
 			@include transform(rotate(180deg));
